--- a/Tailwind-with-cdn/output.css
+++ b/Tailwind-with-cdn/output.css
@@ -774,11 +774,14 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
 
-<<<<<<< Updated upstream
 .mt-9 {
   margin-top: 2.25rem;
 }
@@ -791,12 +794,24 @@ video {
   margin-top: 60px;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
-=======
-.mt-\[60px\] {
-  margin-top: 60px;
->>>>>>> Stashed changes
+.mt-48 {
+  margin-top: 12rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .block {
@@ -832,8 +847,20 @@ video {
   height: 5rem;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-40 {
   height: 10rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-96 {
@@ -868,43 +895,16 @@ video {
   height: 600px;
 }
 
-<<<<<<< Updated upstream
-.h-\[700px\] {
-  height: 700px;
+.h-\[750px\] {
+  height: 750px;
 }
 
-=======
->>>>>>> Stashed changes
 .h-full {
   height: 100%;
 }
 
 .h-tugas34 {
   height: 300px;
-}
-
-<<<<<<< Updated upstream
-.h-6 {
-  height: 1.5rem;
-}
-
-=======
->>>>>>> Stashed changes
-.h-4 {
-  height: 1rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-<<<<<<< Updated upstream
-.h-\[750px\] {
-  height: 750px;
-=======
-.h-6 {
-  height: 1.5rem;
->>>>>>> Stashed changes
 }
 
 .w-1\/2 {
@@ -935,12 +935,20 @@ video {
   width: 8rem;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .w-40 {
   width: 10rem;
 }
 
 .w-44 {
   width: 11rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-64 {
@@ -983,21 +991,8 @@ video {
   width: 300px;
 }
 
-<<<<<<< Updated upstream
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-4 {
-  width: 1rem;
-=======
-.w-4 {
-  width: 1rem;
-}
-
-.w-6 {
-  width: 1.5rem;
->>>>>>> Stashed changes
+.w-1\/4 {
+  width: 25%;
 }
 
 .max-w-lg {
@@ -1271,6 +1266,11 @@ video {
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
 
+.border-slate-950 {
+  --tw-border-opacity: 1;
+  border-color: rgb(2 6 23 / var(--tw-border-opacity));
+}
+
 .bg-\[\#1a535c\] {
   --tw-bg-opacity: 1;
   background-color: rgb(26 83 92 / var(--tw-bg-opacity));
@@ -1401,6 +1401,16 @@ video {
   background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -1504,6 +1514,14 @@ video {
   background-repeat: no-repeat;
 }
 
+.p-0 {
+  padding: 0px;
+}
+
+.p-0\.5 {
+  padding: 0.125rem;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -1522,14 +1540,6 @@ video {
 
 .p-hamzah {
   padding: 3.25rem;
-}
-
-.p-0 {
-  padding: 0px;
-}
-
-.p-0\.5 {
-  padding: 0.125rem;
 }
 
 .px-3 {
@@ -1656,6 +1666,10 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-extrabold {
+  font-weight: 800;
 }
 
 .uppercase {
@@ -2019,6 +2033,16 @@ video {
   background-color: rgb(76 29 149 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-red-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.hover\:text-7xl:hover {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .hover\:font-semibold:hover {
   font-weight: 600;
 }
@@ -2031,6 +2055,16 @@ video {
 .focus\:border-sky-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(14 165 233 / var(--tw-border-opacity));
+}
+
+.focus\:bg-red-800:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-purple-800:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 33 168 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -2098,31 +2132,9 @@ video {
   visibility: hidden;
 }
 
-<<<<<<< Updated upstream
-:is(.dark .dark\:h-6) {
-  height: 1.5rem;
-}
-
-=======
->>>>>>> Stashed changes
 :is(.dark .dark\:translate-x-3) {
   --tw-translate-x: 0.75rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-<<<<<<< Updated upstream
-:is(.dark .dark\:border-slate-950) {
-  --tw-border-opacity: 1;
-  border-color: rgb(2 6 23 / var(--tw-border-opacity));
-=======
-:is(.dark .dark\:border-slate-500) {
-  --tw-border-opacity: 1;
-  border-color: rgb(100 116 139 / var(--tw-border-opacity));
-}
-
-:is(.dark .dark\:border-slate-900) {
-  --tw-border-opacity: 1;
-  border-color: rgb(15 23 42 / var(--tw-border-opacity));
 }
 
 :is(.dark .dark\:border-blue-500) {
@@ -2133,7 +2145,21 @@ video {
 :is(.dark .dark\:border-slate-50) {
   --tw-border-opacity: 1;
   border-color: rgb(248 250 252 / var(--tw-border-opacity));
->>>>>>> Stashed changes
+}
+
+:is(.dark .dark\:border-slate-500) {
+  --tw-border-opacity: 1;
+  border-color: rgb(100 116 139 / var(--tw-border-opacity));
+}
+
+:is(.dark .dark\:border-slate-900) {
+  --tw-border-opacity: 1;
+  border-color: rgb(15 23 42 / var(--tw-border-opacity));
+}
+
+:is(.dark .dark\:border-slate-950) {
+  --tw-border-opacity: 1;
+  border-color: rgb(2 6 23 / var(--tw-border-opacity));
 }
 
 :is(.dark .dark\:bg-black) {
@@ -2141,24 +2167,6 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-<<<<<<< Updated upstream
-=======
-:is(.dark .dark\:bg-slate-500) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-}
-
->>>>>>> Stashed changes
-:is(.dark .dark\:bg-slate-900) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
-<<<<<<< Updated upstream
-:is(.dark .dark\:bg-slate-950) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 6 23 / var(--tw-bg-opacity));
-=======
 :is(.dark .dark\:bg-blue-500) {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -2167,17 +2175,31 @@ video {
 :is(.dark .dark\:bg-slate-50) {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
->>>>>>> Stashed changes
 }
 
-:is(.dark .dark\:text-white) {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+:is(.dark .dark\:bg-slate-500) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-slate-900) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-slate-950) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 6 23 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:text-black) {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-white) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -2282,7 +2304,6 @@ video {
     margin-top: 3rem;
   }
 
-<<<<<<< Updated upstream
   .md\:mt-16 {
     margin-top: 4rem;
   }
@@ -2295,41 +2316,22 @@ video {
     margin-top: 1.25rem;
   }
 
-  .md\:mt-\[80px\] {
-    margin-top: 80px;
-  }
-
-  .md\:mt-\[90px\] {
-    margin-top: 90px;
-  }
-
   .md\:mt-\[70px\] {
     margin-top: 70px;
-=======
-  .md\:mt-24 {
-    margin-top: 6rem;
-  }
-
-  .md\:mt-5 {
-    margin-top: 1.25rem;
   }
 
   .md\:mt-\[90px\] {
     margin-top: 90px;
->>>>>>> Stashed changes
   }
 
   .md\:grid {
     display: grid;
   }
 
-<<<<<<< Updated upstream
   .md\:h-\[1000px\] {
     height: 1000px;
   }
 
-=======
->>>>>>> Stashed changes
   .md\:h-\[800px\] {
     height: 800px;
   }
